force-app/main/default/objects/APICredentials__mdt/APICredentials__mdt.object-meta.xml
<CustomObject>
    <description>This Metadata is used to store Credentials of the API&apos;s</description>
    <label>API Credentials</label>
    <pluralLabel>API Credentials</pluralLabel>
</CustomObject>