force-app/main/default/objects/APICredentials__mdt/fields/CLIENT_ID__c.field-meta.xml
<CustomField>
    <fullName>CLIENT_ID__c</fullName>
    <label>CLIENT-ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>