force-app/main/default/objects/APICredentials__mdt/fields/CLIENT_SECRET__c.field-meta.xml
<CustomField>
    <fullName>CLIENT_SECRET__c</fullName>
    <label>CLIENT-SECRET</label>
    <length>255</length>
    <type>Text</type>
</CustomField>