force-app/main/default/objects/APICredentials__mdt/fields/CORRELATION_ID__c.field-meta.xml
<CustomField>
    <fullName>CORRELATION_ID__c</fullName>
    <label>CORRELATION-ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>