force-app/main/default/objects/APICredentials__mdt/fields/End_Point_All__c.field-meta.xml
<CustomField>
    <fullName>End_Point_All__c</fullName>
    <label>End Point All</label>
    <length>255</length>
    <type>Text</type>
</CustomField>