force-app/main/default/objects/APICredentials__mdt/fields/Endpoint_DLKYC__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_DLKYC__c</fullName>
    <label>Endpoint DLKYC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>