force-app/main/default/objects/APICredentials__mdt/fields/Endpoint_PassportKYC__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_PassportKYC__c</fullName>
    <label>Endpoint PassportKYC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>