force-app/main/default/objects/APICredentials__mdt/fields/Endpoint_VoterIDKYC__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_VoterIDKYC__c</fullName>
    <label>Endpoint VoterIDKYC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>